# TokenSmith

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
models/: registry.json
requests/: tokensmith.http
src/: cli.rs  error.rs  main.rs
src/config/: paths.rs  state.rs
src/doctor/: mod.rs
src/model_registry/: mod.rs  types.rs
src/monitor/: display.rs  mod.rs  sample.rs
src/optimizer/: memory.rs  mod.rs  profiles.rs
src/profiler/: linux.rs  macos.rs  mod.rs  types.rs  windows.rs
src/runtime/: llama_cpp.rs  mod.rs  process.rs
src/selector/: heuristics.rs  mod.rs
src/server/: metrics.rs  mod.rs  openai.rs  sse.rs
src/utils/: checksum.rs  download.rs  logging.rs  mod.rs  net.rs  time.rs
tests/: recommend_integration.rs  registry_integration.rs
