[package]
name = "tokensmith"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json"] }
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3"
dirs = "6"
futures = "0.3"
indicatif = "0.18"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.33"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

